@@ -35,7 +35,7 @@ public:
     MatrixColumn( MATRIX& parent, int i ) : 
         n(parent.nrow()),
         start(parent.begin() + i * n ), 
-        const_start(parent.begin() + i *n)
+        const_start(const_cast<const MATRIX&>(parent).begin() + i *n)
     {
         if( i < 0 || i >= parent.ncol() ) throw index_out_of_bounds() ;
     }
